--- a/Raschtree_MH.Rnw
+++ b/Raschtree_MH.Rnw
@@ -8,9 +8,6 @@ weekly news magazine SPIEGEL. Below we will use the abbreviation \texttt{SPISA} 
 Three possible partitioning variables are considered: \texttt{Gender} (in this data set coded only as male, female, or missing), \texttt{Age} (continuous), and \texttt{Area} (Area of study: Language \& Culture, Law \& Economics, Medicine \& Health, Engineering, Sciences, Pharmacy, Geography, Agriculture \& Nutrition, or Sports). The nine items from the culture scale are scored with 0 (incorrect answer) or 1 (correct answer). 
 The quiz data have been prepared in a format where the nine items of the culture scale are not stored as individual columns of the data set, but the complete matrix of item responses is stored as a single variable \citep[see][]{raschtree:vignette} under the name \texttt{culture}. This means that we can access the item responses for all items jointly using the name \texttt{culture} in the following \texttt{R} commands. The first few rows of the data set look like this:
 
-\todo{I usually use load for Rda files, Marjolein uses readRDS, is there an advantage? use the same in both examples.
-Mirka: from what I understand, readRDS is for loading .rds/.rda files with only one r object in it, while load is for .rda files with one or more r object in it. I would opt for .rda, because I think it is more general? Marjolein: I think if we include datasets in supplemental materials, we should have files which are only 1 dataset, not sets of datasets or objects. I think this will make the examples more simple. In practice, users will probably also have only 1 dataset.}
-
 <<>>=
 load("dat_SPISA.Rda")
 head(dat_SPISA, 3)
@@ -44,7 +41,7 @@ Raschtree_culture <- raschtree(culture ~  Gender + Age + Area,
                                data = dat_SPISA)
 @
 
-Once the Rasch tree has been fitted, we can plot it using the standard \texttt{plot} function. The resulting tree is depicted in Figure \ref{fig:MHtree1}. The item parameters for the nine culture items are displayed in the terminal nodes of the tree. However, it is hard to interpret the tree structure because such a large number of splits was created. Moreover, it is hard to tell whether all splits are due to substantial amounts of DIF, or whether some of the splits are due to small DIF effects that only became statistically significant due to the large sample size.
+Once the Rasch tree has been fitted, we can plot it using the standard \texttt{plot} function: 
 
 <<eval=FALSE>>=
 plot(Raschtree_culture)
@@ -60,6 +57,7 @@ plot(Raschtree_culture)
 \label{fig:MHtree1}
 \end{figure}%
 
+The resulting tree is depicted in Figure \ref{fig:MHtree1}. The item parameters for the nine culture items are displayed in the terminal nodes of the tree. However, it is hard to interpret the tree structure because such a large number of splits was created. Moreover, it is hard to tell whether all splits are due to substantial amounts of DIF, or whether some of the splits are due to small DIF effects that only became statistically significant due to the large sample size.
 
 To assess whether DIF effects are substantial or negligible, it is possible to use the Mantel-Haenszel DIF effect size measure as an additional stopping criterion. It has three categories (A: negligible, B: moderate, C: large). If none of the items shows DIF in category B or C\footnote{This is the default setting. It can also be changed so that splitting is stopped if no item shows DIF in category C.}, the tree is stopped from growing further.
 At the moment, the \texttt{R} functions for the Mantel-Haenszel stopping criterion and additional visualizations based on the Mantel-Haenszel effect size are available from GitHub. They will be made available as part of the \texttt{psychotree} package in the future.
@@ -75,7 +73,9 @@ library("raschtreeMH")
 We can use a syntax very similar to that of the original \texttt{raschtree} function, but now we also specify the additional argument \texttt{stopfun}. We want to use the Mantel-Haenszel stopping function (\texttt{stopfun\_mantelhaenszel}) together with iterative purification. It is also possible to provide other, user-defined stopping functions \citep[see][for details]{HennyDeba23}.
 
 For the purification strategy, there are three options: \texttt{none}, \texttt{2step} and \texttt{iterative}. Purification means that items which have already been diagnosed with DIF are taken out of the sum score, which is used as the matching criterion in the final DIF test. It is highly recommended to use a purification strategy, because otherwise false positives (i.e., artificial DIF) may occur \citep[cf., e.g.,][and the references therein]{DebStrZei:2022:CRC,HennyDeba23,Kopfetal:2015:EPM}. In two-step purification, a new sum score without the items that were diagnosed with DIF in step 1 is computed for the final DIF analysis in step 2. When using iterative purification, this process is repeated until two runs yield the same DIF items or until a maximum value of iterations is reached. 
-The final set of DIF-free items resulting from the purification is also used for aligning the item parameters for each group comparison in the tree plots with color coding, which are displayed below.
+The final set of DIF-free items resulting from the purification will also be used for aligning the item parameters for each group comparison in the tree plots with color coding, which will be discussed and displayed below.
+
+We fit the Raschtree using the Mantel-Haenszel stopping criterion as follows:
 
 <<echo = FALSE>>=
 if(!file.exists("SPISA_example/Raschtree_MH_culture.rda")){
@@ -117,7 +117,7 @@ After we have added this information to the Rasch tree, we can now visualize it 
 plot(Raschtree_MH_culture)
 @
 
-The result is presented in Figure~\label{fig:MHtree2}, which reveals that the Rasch tree is much more concise with a lower number of splits. In addition, in each node the number of items classified as A, B, or C is displayed. For instance, we can see that in node 1 one item is classified in category B (moderate DIF), and 4 items are classified in category C (large DIF).
+The result is presented in Figure~\ref{fig:MHtree2}, which reveals that the Rasch tree is much more concise with a lower number of splits. In addition, in each node the number of items classified as A, B, or C is displayed. For instance, we can see that in node 1 one item is classified in category B (moderate DIF), and 4 items are classified in category C (large DIF).
 
 We can also color the DIF items in the end node profiles according to a particular split in the tree. We will illustrate this with two examples: First, we can see that for node 1 (split in the covariate \texttt{Gender}), items 1, 6, 7, 8, and 9 show DIF in categories B or C. As a reminder, the content of these items was:
 
@@ -143,7 +143,8 @@ plot(Raschtree_MH_culture, color_by_node = 1)
 \end{figure}%
 
 These items are %(relative to the DIF-free items for this group comparison) 
-easier or less difficult to answer for participants with female or missing gender.
+easier or less difficult to answer for participants with female or missing gender. Alternatively, we can also color the DIF items in the end node profiles according to a later split in the tree:
+
 
 % We can also color the DIF items according to node 2 (split in the covariate \texttt{Age}). Again, item 1 (Painting by Andy Warhol) shows DIF in category B. It is (relative to the DIF-free items for this group comparison) more difficult to answer for younger respondents (age $\leq 24$) compared to older respondents.
 
@@ -151,7 +152,6 @@ easier or less difficult to answer for participants with female or missing gende
 % plot(Raschtree_MH_culture, color_by_node = 2)
 % @
 
-Alternatively, we can also color the DIF items in the end node profiles according to a later split in the tree:
 
 <<eval=FALSE>>=
 plot(Raschtree_MH_culture, color_by_node = 4)
