--- a/_MOB_paper.bib
+++ b/_MOB_paper.bib
@@ -15,6 +15,26 @@ title = {{Interpretable machine learning for psychological research: Opportuniti
 year = {2023}
 }
 
+@Article{BrysyStev18,
+  author    = {Brysbaert, Marc and Stevens, Micha{\"e}l},
+  journal   = {Journal of Cognition},
+  title     = {Power analysis and effect size in mixed effects models: A tutorial},
+  year      = {2018},
+  number    = {1},
+  volume    = {1},
+  publisher = {Ubiquity Press},
+}
+
+@article{Bran18,
+  title={Precision, reliability, and effect size of slope variance in latent growth curve models: Implications for statistical power analysis},
+  author={Brandmaier, Andreas M and von Oertzen, Timo and Ghisletta, Paolo and Lindenberger, Ulman and Hertzog, Christopher},
+  journal={Frontiers in Psychology},
+  volume={9},
+  pages={294},
+  year={2018},
+  publisher={Frontiers}
+}
+
 @book{JameyWitt23,
   title={An introduction to statistical learning: With applications in {R} (2nd ed.)},
   author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert and Taylor, Jonathan},
