--- a/_MOB_paper.Rnw
+++ b/_MOB_paper.Rnw
@@ -22,17 +22,16 @@
 %text from Marjolein edited by Caro
 \newcommand{\edc}[1]{\textcolor{blue}{#1}}
 
-\linespread{1.3}
+\linespread{1.5}
 
 
 \title{One Model May Not Fit All: Subgroup Detection Using Model-Based Recursive Partitioning}
-\shorttitle{shorttitle}
+\shorttitle{Subgroup Detection Using Model-Based Recursive Partitioning}
 
-\authorsnames{Marjolein Fokkema$^1$, Mirka Henninger$^2$ \& Carolin Strobl$^2$}
-\authorsaffiliations{$^1$Leiden University, $^2$Universit\"at Z\"urich}
+\authorsnames{ }
+\authorsaffiliations{ }
 
-\abstract{Model-based recursive partitioning \citep[MOB,][]{ZeilyHoth08} is a flexible framework for detecting subgroups of persons showing different effects in a wide range of parametric models. It provides a versatile tool for detecting and explaining heterogeneity of intervention effects. In this tutorial paper, we provide an introduction to the general MOB framework. In two specific case studies, we show how MOB-based methods can be used to detect and explain heterogeneity in two widely-used frameworks in educational studies: mixed-effects and item response theory (IRT) models. In the first case study, we show how GLMM trees \citep{FokkySmit18} can be used to detect subgroups with different parameters in mixed-effects models. We apply GLMM trees to longitudinal data from a study on the effects of Head Start, to identify subgroups of families where children show comparatively larger or smaller gains in performance. In a second case study, we show how Rasch trees \citep{StroyKopf15} can be used to detect subgroups with different item parameters in IRT models, i.e.~differential item functioning (DIF). %DIF should be investigated before using test results for comparing groups, because undetected DIF can affect test fairness. % Test fairness is more related to use of test scores in practice than group-level comparisons I would think?
-We show how a recently developed stopping criterion \citep{HenDebStr:2023:EPM} can be used to guide subgroup detection based on DIF effect sizes.\\}
+\abstract{Model-based recursive partitioning \citep[MOB,][]{ZeilyHoth08} is a flexible framework for detecting subgroups of persons showing different effects in a wide range of parametric models. It provides a versatile tool for detecting and explaining heterogeneity in, for example, intervention studies. In this tutorial paper, we provide an introduction to the general MOB framework. In two specific case studies, we show how MOB-based methods can be used to detect and explain heterogeneity in two widely-used frameworks in educational studies: mixed-effects and item response theory (IRT) models. In the first case study, we show how GLMM trees \citep{FokkySmit18} can be used to detect subgroups with different parameters in mixed-effects models. We apply GLMM trees to longitudinal data from a study on the effects of Head Start, to identify subgroups of families where children show comparatively larger or smaller gains in performance. In a second case study, we show how Rasch trees \citep{StroyKopf15} can be used to detect subgroups with different item parameters in IRT models, i.e.~differential item functioning (DIF). DIF should be investigated before using test results for group comparisons. We show how a recently developed stopping criterion \citep{HenDebStr:2023:EPM} can be used to guide subgroup detection based on DIF effect sizes.\\}
 
 
 \begin{document}
@@ -43,6 +42,31 @@ We show how a recently developed stopping criterion \citep{HenDebStr:2023:EPM} c
 ## suppress printing of > and + before code, it is annoying for copy-pasting
 options(prompt=" ", continue = " ") 
 @
+
+
+\begin{titlepage}
+   \begin{center}
+       \vspace*{1cm}
+
+       \textbf{\large One Model May Not Fit All}\\
+
+       \vspace{0.5cm}
+        \large Subgroup Detection Using\\Model-Based Recursive Partitioning\\
+            
+       \vspace{1.5cm}
+
+       \textbf{Marjolein Fokkema$^1$, Mirka Henninger$^2$ and Carolin Strobl$^2$}\\
+       $^1$Leiden University, $^2$Universit\"at Z\"urich
+
+       \vfill
+
+            
+       \vspace{0.8cm}
+     
+
+   \end{center}
+\end{titlepage}
+
 
 \maketitle
 
@@ -224,7 +248,7 @@ HS_dat <- HS_dat[complete.cases(HS_dat), ]
 HS_dat$Age_orig <- HS_dat$Age
 #HS_dat$Age <- sqrt(HS_dat$Age)
 rownames(HS_dat) <- NULL
-saveRDS(HS_dat, file = "HS_dat.Rda")
+save(HS_dat, file = "HS_dat.Rda")
 @
 
 \subsection{Dataset}
@@ -241,7 +265,7 @@ Note that the latter variable is one that should be completely irrelevant for pr
 We load the data and inspect the first rows:
 
 <<>>=
-HS_dat <- readRDS("HS_dat.Rda")
+load("HS_dat.Rda")
 head(HS_dat, 3)
 @
 
@@ -301,6 +325,29 @@ Next, we plot the tree. With multiple fixed-effects predictors of interest, the 
 plot(HS_tree, type = "simple", nodesize_level = 2)
 @
 
+
+<<echo=FALSE, results=tex>>=
+coefs <- round(coef(HS_tree), digits = 2)
+design_df <- data.frame(.tree = rep(sort(unique(HS_tree$data$.tree)), each = 2),
+                        Program = factor(rep(c("None", "HS"))))
+design_df$`PPVT at age 6` <- predict(HS_tree$lmer, newdata = cbind(design_df, Age = 6), 
+                                     re.form = ~0)
+design_df$`PPVT at age 12` <- predict(HS_tree$lmer, newdata = cbind(design_df, Age = 12), 
+                                      re.form = ~0)
+names(design_df)[1] <- "Node"
+
+#library("kableExtra")
+#kable_styling(
+knitr::kable(design_df, format = "latex", digits = 2, 
+             caption = "Node-specific average predicted PPVT scores at different ages.", 
+             label = "predictions", centering = FALSE,
+             linesep = "", # linesep command suppressess addlinesep every 5 rows
+             row.names = FALSE, escape=TRUE, align = c("cccc"), booktabs = TRUE)#,
+#latex_options = "HOLD_position")
+@
+
+\FloatBarrier
+
 \begin{figure}%
 \caption{GLMM tree with trajectories of PPVT scores}
 <<fig=TRUE, echo=FALSE, fig.width=9, fig.height=4>>=
@@ -328,29 +375,10 @@ for (node in sort(unique(nodes))) {
 \label{fig:lmm_tree}
 \end{figure}%
 
-
 The resulting tree is presented in Figure~\ref{fig:lmm_tree}. Below each terminal node, we plotted the observations and the two regression curves given by the coefficients in that node. The first split was made based on the AFTQ variable, which represents the mother's score on the Armed Forced Qualification Test, adjusted for the age at which they completed the test. The group with higher mother's AFTQ scores is further split based on race. The Black and Hispanic group is further split based on mother's AFTQ score. 
 
-\FloatBarrier
 
-<<echo=FALSE, results=tex>>=
-coefs <- round(coef(HS_tree), digits = 2)
-design_df <- data.frame(.tree = rep(sort(unique(HS_tree$data$.tree)), each = 2),
-                        Program = factor(rep(c("None", "HS"))))
-design_df$`PPVT at age 6` <- predict(HS_tree$lmer, newdata = cbind(design_df, Age = 6), 
-                                     re.form = ~0)
-design_df$`PPVT at age 12` <- predict(HS_tree$lmer, newdata = cbind(design_df, Age = 12), 
-                                      re.form = ~0)
-names(design_df)[1] <- "Node"
-knitr::kable(design_df, format = "latex", digits = 2, 
-             caption = "Node-specific average predicted PPVT scores at different ages.", 
-             label = "predictions", centering = FALSE,
-             linesep = "", # linesep command suppressess addlinesep every 5 rows
-             row.names = FALSE, escape=TRUE, align = c("cccc"), booktabs = TRUE)
-@
-
-To aid interpretation of the coefficients in Figure~\ref{fig:lmm_tree}, Table~\ref{tab:predictions} provides predicted PPVT scores for each of the groups and programs at ages 6 and 12. All nodes show a modest benefit of Head Start participation at age 6, about 3-4 points on the PPVT. This benefit increases over time for the group with higher mother's AFTQ scores. The benefit decreases over time for children in the group with lowest mother's AFTQ scores (node 2). For Black and Hispanic children with intermediate mother's AFTQ scores, the benefit at age 6 even shifts to a disadvantage of Head Start participation at age 12. These results roughly correspond to the findings of \cite{Demi09}, who report a relative benefit of Head Start participation of about 0.15 standard deviations at age 5-6, which fades out over time to about 0.05 at ages 11-14. Fade out is reported to be particularly strong for Afriacn-American and very disadvantaged children.
-
+To aid interpretation of the coefficients in Figure~\ref{fig:lmm_tree}, Table~\ref{tab:predictions} provides predicted PPVT scores for each of the groups and programs at ages 6 and 12. All nodes show a modest benefit of Head Start participation at age 6, about 3-4 points on the PPVT. This benefit increases over time for the group with higher mother's AFTQ scores. The benefit decreases over time for children in the group with lowest mother's AFTQ scores (node 2). For Black and Hispanic children with intermediate mother's AFTQ scores, the benefit at age 6 even shifts to a disadvantage of Head Start participation at age 12. These results roughly correspond to the findings of \cite{Demi09}, who report a relative benefit of Head Start participation of about 0.15 standard deviations at age 5-6, which fades out over time to about 0.05 at ages 11-14. Fade out was reported to be particularly strong for Afriacn-American and very disadvantaged children. The global benefit of participation in Head Start as shown in Figure~\ref{fig:global_lmm} and reported by \cite{Demi09} thus seems to differ across groups.
 
 %To evaluate whether the detected subgroups indeed contribute to better predictions, we used cross validation. We \edc{randomly} separated the \Sexpr{length(unique(HS_dat$MotherID))} families in the dataset into ten equally-sized folds. We took nine of the ten folds as a training dataset on which we fitted two models: an LMM tree \edc{like the one shown above} (i.e., an LMM with subgroups \todo{necessary? confused me}) and an LMM without subgroups (comprising main and interaction effects of age and Head Start participation, and a random intercept with respect to child). We evaluated performance on the remaining folds by computing and evaluating accuracy of the predictions. \todo{explain MSE and $R^2$} We repeated this procedure ten times, so that all folds were used as a test set once. The results are presented in Table~\ref{tab:performance}, which shows that LMM trees generalize well: They provide better predictive accuracy compared to LMMs, while implementing only few splits. 
 
@@ -398,7 +426,7 @@ knitr::kable(res_df, format = "latex", digits = 3,
 
 
 \newpage
-\FloatBarrier
+
 \section{Application Example 2: Subgroup Detection in Rasch Models}
 \label{sec:TutorialRasch}
 
@@ -413,13 +441,17 @@ However, researchers should be aware that a covariate-based approach like MOB wi
 
 Another important caveat is that those covariates that are selected for splitting by the MOB algorithm are not necessarily causal for the observed parameter differences. They might also be proxies for other, unobserved covariates. For example, if DIF in the item parameters of a test on reading ability is found between different cities or districts, a variety of factors could be causally driving these effects, such as different compositions of native languages or sociodemographics. 
 
-As with any exploratory method, MOB should be considered as a tool for generating hypotheses and not as a confirmatory technique. While the MOB algorithm, as it is implemented in the \texttt{R} packages presented in this tutorial, has been constructed with care and uses statistical significance tests (and in the case of Mantel-Haenszel trees also effect sizes) to avoid spurious splits, for confirmatory hypothesis testing it is recommended to use a new dataset, not used for fitting the tree. Further, resampling or $k$-fold cross validation techniques may be used to assess stability and accuracy of the model. \cite{PhilyRusc18} show how to use these techniques for assessing the stability of the set of selected variables and cutpoints. For GLMM trees, cross-validation can additionally be used for evaluating predictive accuracy \cite[e.g., ]{RooiyWeed20}, or for further optimizing predictive accuracy through the choice of model-fitting parameters, like the minimum number of observations the terminal nodes or the maximum tree depth \cite{JameyWitt23}.  
+As with any exploratory method, MOB should be considered as a tool for generating hypotheses and not as a confirmatory technique. While the MOB algorithm, as it is implemented in the \texttt{R} packages presented in this tutorial, has been constructed with care and uses statistical significance tests (and in the case of Mantel-Haenszel trees also effect sizes) to avoid spurious splits, for confirmatory hypothesis testing it is recommended to use a new dataset, not used for fitting the tree. Further, resampling or $k$-fold cross validation techniques may be used to assess stability and accuracy of the model. \cite{PhilyRusc18} show how to use these techniques for assessing the stability of the set of selected variables and cutpoints. For GLMM trees, cross-validation can additionally be used for evaluating predictive accuracy \citep[e.g., ][]{RooiyWeed20}, or for further optimizing predictive accuracy through the choice of model-fitting parameters, like the minimum number of observations in the terminal nodes or the maximum tree depth \citep{JameyWitt23}.  
 
 %\todo[inline]{I (Caro) have added a few more thoughts for the discussion above - Marjolein maybe this is already sufficient in length? please feel free to use anything from above or below and get back to me if you add/keep points where we might disagree}
 
 %Due to the exploratory nature of MOB, it does not allow for hypothesis tests\todo[inline]{I (Caro) think this will sound confusing because earlier in the paper we explain that MOB is indeed based on significance tests, and due to the fact that the stopping is based on the significance test and (at least in party and psychotree) we use Bonferroni for adjusting against the number of covariates, it is not like we are doing completely uncontrolled multiple testing - in the Raschtree paper we write about this: Moreover, it is important to note that our model-based recursive partitioning algorithm is not affected by an inflation of chance due to its recursive nature. Indeed, several statistical tests are successively conducted in a Rasch tree—but each test is conducted only if the previous test yielded a significant result. In this sense, the recursive approach forms a closed testing procedure, which does not lead to an inflation of chance as is well known from the literature on multiple comparisons (Marcus, Peritz, \& Gabriel, 1976; Hochberg \& Tamhane, 1987). For the Rasch tree, this means that the postulated significance level holds for the entire tree, not only for each individual split. This ensures that DIF is not erroneously detected as an artifact of the recursive nature of the algorithm. -- another, related, limitation that I would agree with and might be what you also had in mind is that the tree will not necessarily find the globally best partition, because every split is based on the previous split choices, here is what we wrote about this in the tree intro PsychMeth paper: Thus, variable selection in a single tree is affected by order effects similar to those present in stepwise variable selection approaches for parametric regression (that is also instable against random variation of the learning data, as pointed out by Austin and Tu 2004). In both recursive partitioning and stepwise regression, the approach of adding one locally optimal variable at a time does not necessarily (or rather hardly ever) lead to the globally best model over all possible combinations of variables. -- should we write something similar here?}, as there is no valid way to account for the exploratory searching of the subgroups. Thus, even if detected subgroups are substantively meaningful or differences are large, if researchers want to ascertain statistical significance of the subgroup differences, this should be done on new data using confirmatory techniques. \todo{Marjolein write a little more here? e.g. such as cross validation.}
 
-\hyperref[sec:TutorialRasch]{Application Example 2} showed that the Rasch tree method can employ an effect size measure to stop the tree from growing if effect-size differences are non-substantial. This also supports researchers in interpreting the tree's results with respect to whether DIF effects are negligible, medium, or large. At the same time, effect sizes are less straightforward to calculate and interpret in mixed-effects models \citep{JuddyWest17}, and thereby also for GLMM trees. \todo{Interpretation methods might not work as expected for multilevel data, so I am not convinced we should discuss this and call it a remedy.}A remedy to this issue can be interpretation techniques, such as partial dependence plots or individual conditional expectations plots. These interpretation techniques support researchers in gauging the size of the effect of predictor variables visually by depicting the predicted value of the machine learning method as a function of the value of the predictor variable(s). A comprehensive introduction, tutorial, and discussion into interpretation techniques for machine learning methods is given by \cite{Molnar2019} and \cite{Henninger2022c}. 
+\hyperref[sec:TutorialRasch]{Application Example 2} showed that the Rasch tree method can employ an effect size measure to stop the tree from growing if effect-size differences are non-substantial. This also supports researchers in interpreting the tree's results with respect to whether DIF effects are negligible, medium, or large. For mixed-effects models, computation of effect sizes is far from straightforward and several different approaches have been proposed \citep[e.g., ][]{JuddyWest17, BrysyStev18, Bran18}. Effect-size based stopping criteria for GLMM trees are therefore currently not available, but any of the proposed computation approaches proposed for tradtional GLMMs can also be computed from the parameter estimates of GLMM trees.
+
+
+%\todo{Interpretation methods might not work as expected for multilevel data, so I am not convinced we should discuss this and call it a remedy.} 
+%A remedy to this issue can be interpretation techniques, such as partial dependence plots or individual conditional expectations plots. These interpretation techniques support researchers in gauging the size of the effect of predictor variables visually by depicting the predicted value of the machine learning method as a function of the value of the predictor variable(s). A comprehensive introduction, tutorial, and discussion into interpretation techniques for machine learning methods is given by \cite{Molnar2019} and \cite{Henninger2022c}. 
 
 For GLMM trees, the use of cluster-level partitioning variables would commonly be desired in longitudinal analyses. As with traditional GLMMs, specification of the fixed and random effects requires careful consideration. For example, whether random slopes of time should be estimated, or whether random intercepts are sufficient to account for dependency between observations. Building on recent work by \citet{FokkyZeil23}, we will further study and develop methods to take various dependence structures into account. For instance, in future implementations of \texttt{glmertree}, use of parameter stability tests to also allow for detecting subgroup differences in the random-effects parameters \citep{Wang2021a} may be supported.
 
@@ -429,7 +461,7 @@ For GLMM trees, the use of cluster-level partitioning variables would commonly b
 
 \bibliography{_MOB_paper}
 
-\todo{Add DOIs.}
+%\todo{Add DOIs.}
 
 \newpage
 \appendix
@@ -469,3 +501,9 @@ For GLMM trees, the use of cluster-level partitioning variables would commonly b
 
 
 \end{document}
+
+
+<<echo=FALSE>>=
+Stangle(file='_MOB_paper.Rnw', output = '_MOB_paper.R', ,encoding='utf8',
+        drop.evalFALSE = TRUE, annotate = FALSE)
+@
